acciones de navegacion con navbar

--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -19,9 +19,9 @@
 
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="#" aria-current="page">Inicio </a>
-            <a class="nav-item nav-link active" href="#" aria-current="page">Registro </a>
-            <a class="nav-item nav-link active" href="#" aria-current="page">Consulta </a>
+            <a class="nav-item nav-link active" href="{% url 'inicio' %}" aria-current="page">Inicio </a>
+            <a class="nav-item nav-link active" href="{% url 'registros' %}" aria-current="page">Registro </a>
+            <a class="nav-item nav-link active" href="{% url 'consulta' %}"  aria-current="page">Consulta </a>
         </div>
     </nav>
     
