--- a/usuarios/templates/registros/editar.html
+++ b/usuarios/templates/registros/editar.html
@@ -5,6 +5,16 @@
 
 {% block contenido %}
 
-    formurario para editar usuarios
+<div class="card">
+    <div class="card-header">
+        Editar Usuario
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">Datos del Usuario</h4>
+
+        {% include "registros/form.html" %}
+
+    </div>
+</div>
 
 {% endblock %}
