--- a/usuarios/templates/registros/index.html
+++ b/usuarios/templates/registros/index.html
@@ -43,7 +43,7 @@
                         <td>{{user.estado}}</td>
                         <td>{{user.numero}}</td>
                         <td><a name="" id="" class="btn btn-info" href="{% url 'editar' %}" role="button">Editar</a>                     
-                            <a name="" id="" class="btn btn-danger" href="#" role="button">Borrar</a>
+                            <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' user.id %}" role="button">Borrar</a>
                         </td>
                     </tr>
                     {% endfor %}
