--- a/usuarios/templates/registros/form.html
+++ b/usuarios/templates/registros/form.html
@@ -6,12 +6,14 @@
       <label for="" class="form-label">{{campo.label}}:</label>
 
       <input type="{{campo.field.widget.input_type}}"
-        class="form-control" name="{{campo.name}}" id="" aria-describedby="helpId" placeholder="{{campo.label}}">
+        class="form-control" name="{{campo.name}}" id="" aria-describedby="helpId" placeholder="{{campo.label}}"
+        value="{{campo.value | default:''}}"
+        />
 
     </div>
     <div class="col-12 help-text"> {{campo.errors}}</div>
   {% endfor %}
 
   <input name="" id="" class="btn btn-success" type="submit" value="Enviar Información">
-
+    <a name="" id="" class="btn btn-primary" href="{% url 'registros'  %}" role="button">Cancelar</a>
 </form>
