--- a/usuarios/templates/pages/inicio.html
+++ b/usuarios/templates/pages/inicio.html
@@ -13,12 +13,12 @@
         </h1>
 
         <p class="lead">
-            Empezar a ingresar usuarios
+            Por: Sinhue Siordia Millan
         </p>
 
         <hr class="my-2">
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="jump action link" role="button">Empezar</a>
+            <a class="btn btn-primary btn-lg" href="{% url 'registros' %}" role="button">Empezar</a>
         </p>        
     </div>
 </div>
